--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -1,25 +1,3 @@
-/* MAIN */
-
-.Azathoth {
-    background-image: url(/src/pictures/azathoth.jpg);
-    background-size: cover;
-}
-
-.YohSothoth {
-    background-image: url(/src/pictures/yog-sothoth.jpg);
-    background-size: cover;
-}
-
-.ShubNiggurath {
-    background-image: url(/src/pictures/shub-niggurath.jpg);
-    background-size: cover;
-}
-
-.Cthulhu {
-    background-image: url(/src/pictures/cthulhu.jpg);
-    background-size: cover;
-}
-
 /* FONTS  */
 
 @font-face {
@@ -68,6 +46,31 @@
 
 
 
+/* MAIN */
+
+.Azathoth {
+    background-image: url(/src/pictures/Ancient_Azathoth.jpg);
+    background-size: cover;
+}
+
+.YohSothoth {
+    background-image: url(/src/pictures/Ancient_Yog-Sothoth.jpg);
+    background-size: cover;
+}
+
+.ShubNiggurath {
+    background-image: url(/src/pictures/Ancient_Shub-Niggurath.jpg);
+    background-size: cover;
+}
+
+.Cthulhu {
+    background-image: url(/src/pictures/Ancient_Cthulhu.jpg);
+    background-size: cover;
+    display: grid;
+    grid-template-columns: 100px 430px repeat(8 406px) 430px 100px;
+    grid-template-rows: 180px repeat(3 500px) 180px
+}
+
 /* PICTURES  */
 
 .main_eldrich_logo {
@@ -81,9 +84,10 @@
     animation-fill-mode: forwards;
 }
 
-.board {
-    height: 80vh;
-    width: 150vh;
+.eldrich_board {
+    display: grid;
+    grid-column: 2 / 12;
+    grid-row: 2 / 5;
 }
 
 /* TEXT  */
@@ -122,7 +126,7 @@
 }
 
 #buttonAzathoth {
-    background-image: url(/src/pictures/azathoth.jpg);
+    background-image: url(/src/pictures/Ancient_Azathoth.jpg);
     background-size: 36vh;
     opacity: 0;
     animation: fadeInAnimation ease 3s;
@@ -132,7 +136,7 @@
 }
 
 #buttonYog {
-    background-image: url(/src/pictures/yog-sothoth.jpg);
+    background-image: url(/src/pictures/Ancient_Yog-Sothoth.jpg);
     background-size: 36vh;
     opacity: 0;
     animation: fadeInAnimation ease 3s;
@@ -142,7 +146,7 @@
 }
 
 #buttonShub {
-    background-image: url(/src/pictures/shub-niggurath.jpg);
+    background-image: url(/src/pictures/Ancient_Shub-Niggurath.jpg);
     background-size: cover;
     opacity: 0;
     animation: fadeInAnimation ease 3s;
@@ -152,7 +156,7 @@
 }
 
 #buttonCthulhu {
-    background-image: url(/src/pictures/cthulhu.jpg);
+    background-image: url(/src/pictures/Ancient_Cthulhu.jpg);
     background-size: cover;
     background-position: left;
     opacity: 0;
