--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -66,9 +66,11 @@
 .Cthulhu {
     background-image: url(/src/pictures/Ancient_Cthulhu.jpg);
     background-size: cover;
+    height: 100vh;
+    width: 100vw;
     display: grid;
-    grid-template-columns: 100px 430px repeat(8 406px) 430px 100px;
-    grid-template-rows: 180px repeat(3 500px) 180px
+    grid-template-columns: 430fr repeat(8 406fr) 430fr;
+    grid-template-rows: 100fr repeat(3 500fr) 100fr;
 }
 
 /* PICTURES  */
@@ -85,9 +87,11 @@
 }
 
 .eldrich_board {
-    display: grid;
-    grid-column: 2 / 12;
-    grid-row: 2 / 5;
+    grid-area: 1/1/6/11;
+    margin: 100px;
+    height: max-content;
+    align-self: center;
+    justify-self: stretch;
 }
 
 /* TEXT  */
