--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -35,7 +35,6 @@
     src: url(../Eldrich-font/BirminghamTitlingElongated.ttf);
 }
 
-
 /* KEYS  */
 
 @keyframes fadeInAnimation {
@@ -43,8 +42,6 @@
         opacity: 1;
     }
 }
-
-
 
 /* MAIN */
 
@@ -66,11 +63,11 @@
 .Cthulhu {
     background-image: url(/src/pictures/Ancient_Cthulhu.jpg);
     background-size: cover;
+    display: grid;
     height: 100vh;
     width: 100vw;
-    display: grid;
-    grid-template-columns: 430fr repeat(8 406fr) 430fr;
-    grid-template-rows: 100fr repeat(3 500fr) 100fr;
+    grid-template-columns: 12.2% repeat(8 9.45%) 12.2%;
+    grid-template-rows: 9.8% repeat(3 26.8%) 9.8%;   
 }
 
 /* PICTURES  */
@@ -88,8 +85,13 @@
 
 .eldrich_board {
     grid-area: 1/1/6/11;
-    margin: 100px;
-    height: max-content;
+    margin: 2vh 2vw;
+    max-height: 100vh;
+    max-width: 100vw;
+    overflow: hidden;
+    /* object-fit: cover; */
+    /* width: 100%;
+    max-height: 100%; */
     align-self: center;
     justify-self: stretch;
 }
