--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -86,14 +86,14 @@
 .eldrich_board {
     grid-area: 1/1/6/11;
     margin: 2vh 2vw;
-    max-height: 100vh;
-    max-width: 100vw;
+    max-height: 96vh;
+    max-width: 96vw;
     overflow: hidden;
     /* object-fit: cover; */
     /* width: 100%;
     max-height: 100%; */
     align-self: center;
-    justify-self: stretch;
+    /* justify-self: stretch; */
 }
 
 /* TEXT  */
