--- a/src/Components/EncountersCards.css
+++ b/src/Components/EncountersCards.css
@@ -1,10 +1,10 @@
 /* MAIN  */
 
-.encounters {
+/* .encounters {
     display: grid;
     grid-column: 3 / 11;
     grid-row: 4 / 5;
-}
+} */
 
 /* BUTTONS  */
 
