The size of the board might fit

--- a/src/Components/EncountersCards.css
+++ b/src/Components/EncountersCards.css
@@ -1,9 +1,7 @@
 /* MAIN  */
 
 /* .encounters {
-    display: grid;
-    grid-column: 3 / 11;
-    grid-row: 4 / 5;
+    position: fixed;
 } */
 
 /* BUTTONS  */
