--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -67,35 +67,20 @@
     width: 100vw;
 }
 
-.CthulhuDiv {
-    display: grid;
-    grid-template-rows: 50vh 50vh;
-}
-
-.CthulhuBoardDiv {
+.TopDiv {
     position: fixed;
+    height: 50vh;
     width: 100vw;
-    height: 60vh;
     top: 0;
     left: 0;
 }
 
-.CthulhuBoardGrid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 10vh 40vh 10vh;
-}
-
-/* .EncountersDiv {
+.BottomDiv {
     position: fixed;
+    height: 50vh;
     width: 100vw;
-    height: 40vh;
-    left: 0;
     bottom: 0;
-} */
-
-.EncountersGrid {
-    grid-row:2/3;
+    left: 0;
 }
 
 /* .CthulhuContainer {
@@ -105,19 +90,6 @@
     grid-template-columns: repeat(43fr);
     grid-template-rows: repeat(20fr);
 } */
-
-/* .EldritchBoard {
-    display: flex;
-    justify-content: center;
-}
-
-.eldritch_board {
-    position: fixed;
-    max-height: 90vh;
-    max-width: 90vw;
-    margin: 10vh 10vw;
-} */
-
 
 /* PICTURES  */
 
@@ -131,15 +103,6 @@
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
-
-/* .eldritch_board { 
-    margin: 2vh 2vw;
-    max-height: 96vh;
-    max-width: 96vw;
-    overflow: hidden;
-    align-self: center;
-    justify-self: center;
-} */
 
 /* TEXT  */
 
