--- a/src/Components/AncientsBoards.css
+++ b/src/Components/AncientsBoards.css
@@ -1,17 +1,13 @@
 /* MAIN  */
 
-.CthulhuBoard {
-display: relative;
-}
-
 /* BUTTONS  */
 
 .CthulhuSheet {
     background-image: url(/src/pictures/Ancient_Cthulhu_sheet_front.png);
-    background-size: contain;
-    height: 44.95vh;
-    width: 36vh;
-    margin: 2vh;
+    background-size: cover;
+    height: 21vw;
+    width: 17.2vw;
+    margin: 1.2vw;
     transition: all .3s ease;
 }
 
@@ -21,11 +17,11 @@ display: relative;
 
 .CthulhuMystery {
     background-image: url(/src/pictures/Ancient_Cthulhu_mystery.png);
-    height: 15vh;
-    width: 23vh;
-    margin: 2vh;
+    height: 7.4vw;
+    width: 11.5vw;
+    margin: 1.2vw;
     position: absolute;
-    background-size: contain;
+    background-size: cover;
     transition: all .3s ease;
 }
 
@@ -35,11 +31,11 @@ display: relative;
 
 .Mythos {
     background-image: url(/src/pictures/Mythos_Card.png);
-    height: 23vh;
-    width: 15vh;
-    margin: 2vh;
+    height: 11.5vw;
+    width: 7.4vw;
+    margin: 1.2vw;
     justify-content: center;
-    background-size: contain;
+    background-size: cover;
     transition: all .3s ease;
 }
 
