--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -110,7 +110,6 @@
 
 .mainEldritchLogo {
     height: 18vw;
-    padding-top: 1vw;
     margin: 1vw;
     justify-content: center;
     opacity: 0;
@@ -122,7 +121,7 @@
 /* TEXT  */
 
 .mainTitle {
-    margin: 0.5vw;
+    margin: 1vw;
     font-family: 'Birmingham_Titling_Bold';
     font-size: 3.3vw;
     color: white;
@@ -144,7 +143,7 @@ justify-content: center;
 .mainButton {
     height: 15vw;
     width: 15vw;
-    margin: 2vw;
+    margin: 1vw 2vw;
     justify-content: center;
     font-family: 'Birmingham';
     font-size: 1.5vw;
