--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -11,6 +11,12 @@
     width: 99vw;
     overflow: hidden;
     align-self: center;
+    /* FADE IN ANIMATION */
+    opacity: 0;
+    animation: fadeInAnimation ease 4s;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 /* --------- ANCCIENT BOARDS --------- */
@@ -53,6 +59,13 @@
     margin-left: 1.2vw;
     margin-right: 1.2vw;
     transition: all .3s ease;
+    /* STAMP ANIMATION */
+    position:relative;
+    animation-name: pulse;
+    animation-delay:6s;
+    animation-duration: 0.7s;
+    opacity: 0;
+    animation-fill-mode:forwards;
 }
 
 .cthulhuSheet:hover {
@@ -77,6 +90,12 @@
     justify-content: space-evenly;
     align-items: center;
     margin-top: 0.3vw;
+    /* FADE IN ANIMATION */
+    opacity: 0;
+    animation: fadeInAnimation ease 3s;
+    animation-delay: 6.2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 #FlipButton {
@@ -95,6 +114,13 @@
     margin: 1.2vw;
     background-size: cover;
     transition: all .3s ease;
+    /* STAMP ANIMATION */
+    position:relative;
+    animation-name: pulse;
+    animation-delay:6.5s;
+    animation-duration: 0.7s;
+    opacity: 0;
+    animation-fill-mode:forwards;    
 }
 
 .cthulhuMystery:hover {
@@ -117,6 +143,13 @@
     justify-content: center;
     background-size: cover;
     transition: all .3s ease;
+    /* STAMP ANIMATION */
+    position:relative;
+    animation-name: pulse;
+    animation-delay:7s;
+    animation-duration: 0.7s;
+    opacity: 0;
+    animation-fill-mode:forwards;
 }
 
 .mythos:hover {
@@ -195,6 +228,12 @@
     justify-content: center;
     background-size: cover;
     transition: all .3s ease;
+    /* STAMP ANIMATION */
+    position:relative;
+    animation-name: pulse;
+    animation-duration: 0.3s;
+    opacity: 0;
+    animation-fill-mode:forwards;
 }
 
 .encounterCard:hover {
@@ -203,32 +242,40 @@
 
 #America {
     background-image: url(/src/pictures/Encounter_Americas.png);
+    animation-delay:8.1s;
 }
 
 #Europe {
     background-image: url(/src/pictures/Encounter_Europe.png);
+    animation-delay:8.2s;
 }
 
 #AsiaAustralia {
     background-image: url(/src/pictures/Encounter_Asia-Australia.png);
+    animation-delay:8.3s
 }
 
 #General {
     background-image: url(/src/pictures/Encounter_General.png);
+    animation-delay:8.4s
 }
 
 #OtherWorld {
     background-image: url(/src/pictures/Encounter_Other_World.png);
+    animation-delay:8.5s
 }
 
 #Expedition {
     background-image: url(/src/pictures/Encounter_Expedition.png);
+    animation-delay:8.6s
 }
 
 #Ancient_research {
     background-image: url(/src/pictures/Encounter_Cthulhu_research.png);
+    animation-delay:8.7s
 }
 
 #Ancient_special {
     background-image: url(/src/pictures/Encounter_Cthulhu_special.png);
+    animation-delay:8.8s
 }
